--- a/app/views/admin/videos/_form.html.erb
+++ b/app/views/admin/videos/_form.html.erb
@@ -1,6 +1,6 @@
-<%= form_with(model: [:admin,video], class: "contents") do |form| %>
+<%= form_with(model: video) do |form| %>
   <% if video.errors.any? %>
-    <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-lg mt-3">
+    <div style="color: red">
       <h2><%= pluralize(video.errors.count, "error") %> prohibited this video from being saved:</h2>
 
       <ul>
@@ -11,7 +11,27 @@
     </div>
   <% end %>
 
-  <div class="inline">
-    <%= form.submit class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
+  <div>
+    <%= form.label :title, style: "display: block" %>
+    <%= form.text_field :title %>
+  </div>
+
+  <div>
+    <%= form.label :description, style: "display: block" %>
+    <%= form.textarea :description %>
+  </div>
+
+  <div>
+    <%= form.label :link_video, style: "display: block" %>
+    <%= form.text_field :link_video %>
+  </div>
+
+  <div>
+    <%= form.label :cover_image, style: "display: block" %>
+    <%= form.text_field :cover_image %>
+  </div>
+
+  <div>
+    <%= form.submit %>
   </div>
 <% end %>
