--- a/app/views/admin/articles/_article.html.erb
+++ b/app/views/admin/articles/_article.html.erb
@@ -13,5 +13,9 @@
         <strong>Image url:</strong>
         <%= article.image_url %>
       </p>
-    
+      
+      <p>
+        <strong>State:</strong>
+        <%= article.content.state %>
+      </p>
 </div>
