--- a/app/views/admin/videos/_form.html.erb
+++ b/app/views/admin/videos/_form.html.erb
@@ -12,13 +12,13 @@
   <% end %>
 
   <div>
-    <%= form.label :title, style: "display: block" %>
-    <%= form.text_field :title %>
+    <%= content.label :title, style: "display: block" %>
+    <%= content.text_field :title %>
   </div>
 
   <div>
-    <%= form.label :description, style: "display: block" %>
-    <%= form.textarea :description %>
+    <%= content.label :description, style: "display: block" %>
+    <%= content.textarea :description %>
   </div>
 
   <div>
